﻿drkns 24.01.2016 20:10:32 +0200 - build 4517

1. Пара уточнений 4516.

drkns 24.01.2016 14:35:53 +0200 - build 4516

1. При попытке открыть две info- или qview панели через главное меню Far падал.
   Причина классическая - экземпляр панели уничтожался в контексте собственных вызовов.
   Расставлять дальше delaydestroy бессмысленно, поэтому логика владения панелями переделана.
   Теперь нет кучи мутных голых указателей, ссылающихся на что попало в зависимости от погоды.
   Каждая панель - это умный указатель и живёт столько, сколько нужно.
   Возможны причудливые баги, как обычно.

2. Продолжим выносить код из panel.cpp в более подходящие места, дабы хвост поменьше крутил собакой.
   Возможны не менее причудливые баги.

3. Прочий рефакторинг.

drkns 22.01.2016 09:52:55 +0200 - build 4515

1. С форума: mf.clip(5) и mf.clip(5,0) перестали переключать буфер обмена

svs 18.01.2016 17:22:16 +0300 - build 4514

1. SQLite 3.10.1

drkns 17.01.2016 23:48:17 +0200 - build 4513

1. Рефакторинг. Код меню смены диска вынесен из panel.cpp в отдельный файл.

2. При запуске команд по Ctrl-G могло срабатывать ненужное автодополнение в комстроке.

drkns 16.01.2016 11:46:23 +0200 - build 4512

1. 0002953: When the tree3.far cache file exists, calling the tree dialog (Alt-F10) crashes Far manager
   class Panel - это просто праздник какой-то, там есть всё. Даже то, чего там быть не должно по определению.

drkns 15.01.2016 23:27:57 +0200 - build 4511

1. 0003153: Стартовать следующий сеанс грабера в режиме предыдущего (прямоугольный/поточный)

drkns 15.01.2016 10:04:34 +0200 - build 4510

1. Несистемная функция копирования некорректно обрабатывала разреженные файлы с размером блока более 4 GB.

drkns 14.01.2016 22:05:38 +0200 - build 4509

1. 0003151: Переход на новую строку при сдвиге блока граббера в поточном режиме

svs 12.01.2016 22:10:42 +0300 - build 4508

1. SQLite 3.10.0

drkns 11.01.2016 19:50:50 +0200 - build 4507

1. Продолжение 4506.1.
