@@ -1,4 +1,8 @@
-﻿drkns 24.01.2016 20:10:32 +0200 - build 4517
+﻿drkns 26.01.2016 00:15:06 +0200 - build 4518
+
+1. С форума: При повторном просмотре файла по F3 меняется его отображение
+
+drkns 24.01.2016 20:10:32 +0200 - build 4517
 
 1. Пара уточнений 4516.
 
